Fix photo spacing

--- a/styles.css
+++ b/styles.css
@@ -73,8 +73,21 @@ li{
 .caption{
     font-size: 15px;
     font-style: italic;
+    text-align: center;
 }
 
 .container{
     display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+.cake-item{
+    width: 275px;
+    height: 275px;
+    padding: 4px;
+}
+
+.cake-group{
+    width: 275px;
 }
